fix: small font size and no gap between product name and price in card

--- a/src/pages/Product/styles/Product.module.css
+++ b/src/pages/Product/styles/Product.module.css
@@ -34,4 +34,16 @@
     padding: 4vmax;
     grid-template-columns: 1fr;
   }
+
+  .product_name {
+    font-size: 3.4vmax;
+  }
+
+  .product_price {
+    font-size: 3vmax;
+  }
+
+  .description {
+    font-size: 2.2vmax;
+  }
 }
