--- a/src/pages/Product/styles/ProductSizes.module.css
+++ b/src/pages/Product/styles/ProductSizes.module.css
@@ -14,3 +14,9 @@
   border-radius: 4px;
   outline: none;
 }
+
+@media screen and (max-width: 960px) {
+  .product_size {
+    font-size: 2vmax;
+  }
+}
