--- a/src/pages/Shop/styles/ProductCard.module.css
+++ b/src/pages/Shop/styles/ProductCard.module.css
@@ -17,10 +17,17 @@
   padding-top: 1vmin;
   display: flex;
   justify-content: space-between;
+  gap: 8px;
   color: var(--color-eerie-black);
 }
 
 .product_colour_count {
   margin-top: 1vmin;
   color: var(--color-sonic-silver);
+}
+
+@media screen and (max-width: 768px) {
+  .product_card {
+    font-size: 1.6vmax;
+  }
 }
