--- a/src/styles/Cart.module.css
+++ b/src/styles/Cart.module.css
@@ -72,6 +72,6 @@
   }
 
   .total_price {
-    font-size: 2.4vmax;
+    font-size: 2.8vmax;
   }
 }
