--- a/src/styles/CartItem.module.css
+++ b/src/styles/CartItem.module.css
@@ -43,6 +43,6 @@
 
   .product_details {
     margin-left: 1rem;
-    font-size: 2vmax;
+    font-size: 2.4vmax;
   }
 }
